# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  21 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix hangs in bootup, bug #99663.

  21 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    dhclient now sets the hostname correctly    

  20 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Make sure the X11 dirs are always created in /tmp #99679 by Marc Ballarin.

  20 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed <wpa_supplicant-0.4 support

    Removed trailing tab from local.start - fixes #99624

    Moved RC_AUTO_INTERFACE definition to /etc/conf.d/rc

  19 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Punt the cyrus/slocate/vpopmail users/groups to the respective ebuilds.

  19 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    ${ESSID} and ${ESSIDVAR} are now available in predown() - fixes #99106

  18 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Changed wpa-supplicant to wpa_supplicant when reporting that it is not
    installed. Fixes #99381

    Fixed some startup problems caused by a mixture of inactive +
    begin_service/end_service functions.

  16 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add Darwin support for start-stop-daemon, bug #82421.

  15 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not run depmod in modules-update if System.map is missing, bug #59188.

  14 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Remove pointless check of depmod existence in modules init.d since the 
    modules-update script checks for it.

    Run kbd_mode earlier for unicode users so initial loadkeys doesn't 
    trigger a warning #94048 by Eugene Pavlovsky.

  13 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    pump-0.8.21-r4 now creates ntp.conf by itself so the ntp.conf creation
    code has been removed from the pump module and helper.

    Moved wpa_supplicant and iwconfig et all from /usr/sbin to /sbin
