@@ -684,7 +684,8 @@ done
 get_stop_services() {
 	local x list
 
-	for x in $(dolisting "${svcdir}/started/") ; do
+	for x in $(dolisting "${svcdir}/inactive/") \
+		$(dolisting "${svcdir}/started/") ; do
 		list="${list} ${x##*/}"
 	done
 
